SIFS talk added, CV updated

--- a/_talks/2021-04-16-PopDyn.md
+++ b/_talks/2021-04-16-PopDyn.md
@@ -11,7 +11,7 @@ location: "Edinburgh, Scotland"
 
 This talk was part of the [PopDyn](https://adras81.bitbucket.io/){:target="_blank"}<!--_--> seminar series.
 
-You can find [here](/files/slides/2021-04-16-PopDyn_seminar.pdf){:target="_blank"}<!--_--> the slides I have shown during the talk.
+You can find [here](/files/slides/2021-04-16-PopDyn_seminar.pdf){:target="_blank"}<!--_--> the slides I have shown during the talk, and [here](/files/slides/2021-04-16-PopDyn_seminar.pdf){:target="_blank"}<!--_--> the recording of the talk.
 
 
 ## Abstract
