--- a/_wsc/2021-06-22-SMEEB21.md
+++ b/_wsc/2021-06-22-SMEEB21.md
@@ -6,5 +6,5 @@ permalink: /wsc/2021-06-22-SMEEB2021
 venue: "European Center for Living Technology"
 date: 2021-06-22
 period: "June 22nd - 25th, 2021"
-location: "Venice, Italy and online"
+location: "Venice, Italy"
 ---
